--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,17 @@
     height: 1024px;
     background: #FFFFFF;
 }
+.loader {
+    padding-top: 15%;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #fff;
+    opacity: 0.7;
+}
 .header_container {
     position: relative;
     left: 0%;
